// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourStats should render the correct icon 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="container"
>
  <View
    collapsable={false}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text />
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "flexShrink": 1,
          "flexWrap": "wrap",
          "fontSize": 18,
          "marginHorizontal": 8,
        },
      ]
    }
  >
    1001km
  </Text>
</View>
`;

exports[`TourStats should render the icon and font in correct size 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="container"
>
  <View
    collapsable={false}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 30,
          },
          {
            "color": "#FF6E14",
            "textAlign": "center",
            "textAlignVertical": "center",
            "width": 35,
          },
          {
            "fontFamily": "FontAwesome6Free-Regular",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {
            "fontWeight": "400",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    appearance="default"
    category="p1"
    status="basic"
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
        },
        {
          "flexShrink": 1,
          "flexWrap": "wrap",
          "fontSize": 21,
          "marginHorizontal": 8,
        },
      ]
    }
  >
    1001km
  </Text>
</View>
`;
